Restore behaviour of middle anonymous blocks inheriting style from inline parents

BUG=706324

Review-Url: https://codereview.chromium.org/2806123002
Cr-Commit-Position: refs/heads/master@{#465729}

Former-commit-id: 4cd4d67ff4b29899a150e92a129179ca4bbcdd49